--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "cli"
+    "cli",
+    "create-project",
+    "cli-script",
+    "new-project"
   ],
   "author": "Daniil Tsivinsky",
   "license": "MIT",
