--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "new-project": "./cli.js"
   },
   "dependencies": {
+    "chalk": "^3.0.0",
     "node-flags": "^0.1.9",
     "shelljs": "^0.8.3"
   }
